name:                protolude
version:             0.2.4
synopsis:            A small prelude.
description:         A sensible set of defaults for writing custom Preludes.
homepage:            https://github.com/sdiehl/protolude
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016-2019 Stephen Diehl
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/sdiehl/protolude/issues
tested-with:         
  GHC == 7.6.1,
  GHC == 7.6.2,
  GHC == 7.6.3,
  GHC == 7.8.1,
  GHC == 7.8.2,
  GHC == 7.8.3,
  GHC == 7.8.4,
  GHC == 7.10.1,
  GHC == 7.10.2,
  GHC == 7.10.3,
  GHC == 8.0.1,
  GHC == 8.2.1,
  GHC == 8.4.1,
  GHC == 8.6.1,
  GHC == 8.8.1
extra-source-files: README.md CHANGES.md

Source-Repository head
    type: git
    location: git@github.com:sdiehl/protolude.git

library
  exposed-modules:     
    Protolude
    Unsafe
    Debug
    Protolude.Exceptions
    Protolude.Base
    Protolude.Applicative
    Protolude.Bool
    Protolude.List
    Protolude.Monad
    Protolude.Show
    Protolude.Conv
    Protolude.Either
    Protolude.Functor
    Protolude.Semiring
    Protolude.Bifunctor
    Protolude.CallStack
    Protolude.Error
    Protolude.Panic
    Protolude.Safe

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    FlexibleContexts
    MultiParamTypeClasses

  ghc-options:
    -Wall
    -fwarn-implicit-prelude

  build-depends:       
    base                >= 4.6  && <4.14,
    array               >= 0.4  && <0.6,
    ghc-prim            >= 0.3  && <0.6,
    async               >= 2.0  && <2.3,
    deepseq             >= 1.3  && <1.5,
    containers          >= 0.5  && <0.7,
    hashable            >= 1.2  && <1.4,
    transformers        >= 0.2  && <0.6,
    text                >= 1.2  && <1.3,
    stm                 >= 2.4  && <2.6,
    bytestring          >= 0.10 && <0.11,
    mtl                 >= 2.1  && <2.3,
    mtl-compat          >= 0.2  && <0.3,
    transformers-compat >= 0.4  && <0.7

  hs-source-dirs:      src
  default-language:    Haskell2010
