name:               protolude
version:            0.3.0
synopsis:           A small prelude.
description:        A sensible set of defaults for writing custom Preludes.
homepage:           https://github.com/sdiehl/protolude
license:            MIT
license-file:       LICENSE
author:             Stephen Diehl
maintainer:         stephen.m.diehl@gmail.com
copyright:          2016-2020 Stephen Diehl
category:           Prelude
build-type:         Simple
cabal-version:      >=1.10
bug-reports:        https://github.com/sdiehl/protolude/issues
tested-with:
  GHC ==7.6.1
   || ==7.6.2
   || ==7.6.3
   || ==7.8.1
   || ==7.8.2
   || ==7.8.3
   || ==7.8.4
   || ==7.10.1
   || ==7.10.2
   || ==7.10.3
   || ==8.0.1
   || ==8.2.1
   || ==8.4.1
   || ==8.6.1
   || ==8.8.1
   || ==8.10.1
   || ==9.0.1

extra-source-files:
  README.md
  ChangeLog.md

flag dev
  description: Build development tools
  manual:      True
  default:     False

source-repository head
  type:     git
  location: git@github.com:protolude/protolude.git

library
  exposed-modules:
    Protolude
    Protolude.Applicative
    Protolude.Base
    Protolude.Bifunctor
    Protolude.Bool
    Protolude.CallStack
    Protolude.Conv
    Protolude.ConvertText
    Protolude.Debug
    Protolude.Either
    Protolude.Error
    Protolude.Exceptions
    Protolude.Functor
    Protolude.List
    Protolude.Monad
    Protolude.Panic
    Protolude.Partial
    Protolude.Safe
    Protolude.Semiring
    Protolude.Show
    Protolude.Unsafe

  default-extensions:
    NoImplicitPrelude
    FlexibleContexts
    MultiParamTypeClasses
    OverloadedStrings

  ghc-options:        -Wall -fwarn-implicit-prelude
  build-depends:
      array                >=0.4  && <0.6
    , async                >=2.0  && <2.3
    , base                 >=4.6  && <4.16
    , bytestring           >=0.10 && <0.11
    , containers           >=0.5  && <0.7
    , deepseq              >=1.3  && <1.5
    , ghc-prim             >=0.3  && <0.8
    , hashable             >=1.2  && <1.4
    , mtl                  >=2.1  && <2.3
    , mtl-compat           >=0.2  && <0.3
    , stm                  >=2.4  && <2.6
    , text                 >=1.2  && <1.3
    , transformers         >=0.2  && <0.6
    , transformers-compat  >=0.4  && <0.7

  if !impl(ghc >=8.0)
    build-depends: fail ==4.9.*

  hs-source-dirs:     src
  default-language:   Haskell2010

executable exports
  main-is:          Exports.hs
  default-language: Haskell2010

  if flag(dev)
    buildable: True

  else
    buildable: False

  build-depends:
      base          >=4.6 && <4.15
    , directory
    , filepath
    , ghc
    , ghc-paths
    , mtl
    , process
    , protolude
    , transformers
